Modify project setup